--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ SEMAPHOR_APP_URL=https://your-semaphor-instance.com
 # API key for Lambda functions to authenticate with Semaphor backend
 # Generate this from your Semaphor application settings
 LAMBDA_API_KEY=your-api-key-here
+
+# SES verified sender email address for sending reports
+# This email must be verified in AWS SES before use
+# Example: noreply@yourdomain.com or "Your Company <noreply@yourdomain.com>"
+SES_SENDER_EMAIL=noreply@yourdomain.com
